--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,20 +1,29 @@
 {
+  "env": {
+    "node": true,
+    "es6": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
-  "extends": ["plugin:@typescript-eslint/recommended"],
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 8,
     "sourceType": "module"
   },
+  "plugins": ["@typescript-eslint"],
   "rules": {
+    "no-prototype-builtins": "error",
+    "no-multiple-empty-lines": "error",
+    "no-multi-spaces": "off",
+    "keyword-spacing": "error",
+    "space-before-blocks": "error",
+    "indent": "off",
+    "prefer-const": "error",
+    "array-bracket-spacing": "error",
     "semi": ["error", "always"],
-    "quotes": ["error", "double"],
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-explicit-any": 1,
-    "@typescript-eslint/no-inferrable-types": [
-      "warn", {
-        "ignoreParameters": true
-      }
-    ],
-    "@typescript-eslint/no-unused-vars": "warn"
+    "quotes": ["error", "single"]
   }
 }
