--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
+    "node-schedule": "^2.0.0",
     "sequelize": "^6.6.2",
     "winston": "3.3.3"
   },
@@ -37,6 +38,7 @@
     "@types/express": "4.17.11",
     "@types/jest": "26.0.22",
     "@types/node": "^14.14.25",
+    "@types/node-schedule": "^1.3.1",
     "@types/sequelize": "^4.28.9",
     "@types/winston": "2.4.4",
     "@typescript-eslint/eslint-plugin": "4.14.2",
